--- a/Views/Shared/ProjectRedact.cshtml
+++ b/Views/Shared/ProjectRedact.cshtml
@@ -8,7 +8,11 @@
 
     <input class="btn-white btn-top" type="submit" value="Отменить редактирование"
            asp-controller="Home" asp-action="TaskTable"
-           asp-route-Projid="@Model.redactedProject.id" />
+           asp-route-Projid="@Model.redactedProject.id"
+           asp-route-staffTableFilter="@Model.filterStaff"
+             asp-route-recipientProjectFilter="@Model.filterResProj"
+            asp-route-supervisorProjectFilter="@Model.filterSupProj"
+            asp-route-porjectFiltr="@Model.filterProj"/>
 
     <label>В архиве</label>
     <input name="arhive" asp-for="@Model.redactedProject.archive" class="form-control" value="@Model.redactedProject.archive" />
@@ -43,6 +47,11 @@
 
     <input class="btn-white btn-top" type="submit" value="Сохранить"
            asp-controller="Home" asp-action="RedactProjectToDB"
-           asp-route-iid="@Model.redactedProject.id" />
+           asp-route-iid="@Model.redactedProject.id"
+           asp-route-activTable="@Model.activeTableIndex"
+           asp-route-staffTableFilter="@Model.filterStaff"
+             asp-route-recipientProjectFilter="@Model.filterResProj"
+            asp-route-supervisorProjectFilter="@Model.filterSupProj"
+            asp-route-porjectFiltr="@Model.filterProj"/>
 
 </form>
